# ser516public

./: .gitignore  Jenkinsfile  README.md  taigaAPI.java  taigaAPI.py
docker-example/: dockernotes.txt
docker-example/example/java-api-directory/: Dockerfile  build.gradle
project-tools/docker-example/example/: docker-compose.yml
project-tools/github/: Readme.md
project-tools/jenkins-examples/: README.md
project-tools/jenkins-examples/Example_1/: Jenkinsfile  QUICK_REFERENCE.md  README.md  pom.xml
project-tools/jenkins-examples/Example_2/: Jenkinsfile  README.md  pom.xml
project-tools/jenkins-examples/Example_3/: Jenkinsfile  README.md  pyproject.toml
project-tools/jenkins-examples/Example_3/src/greeter/: greeter.py
project-tools/jenkins-examples/Example_3/tests/: test_greeter.py
project-tools/jenkins-examples/Example_4/: Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pom.xml
project-tools/taiga/TaigaAPIPlayground/: README.md  taigaAPI.py
project1/Biscuit/: README.md
project1/ScrumBoardSimulator/: README.md
project1/scrinch/application/: README.txt  nbactions.xml  pom.xml  release-notes.txt
project1/scrinch/distribution/: pom.xml
sampletools/Biscuit/: README.md
sampletools/ScrumBoardSimulator/: Jenkinsfile  README.md  contributors.txt  pom.xml
sampletools/TaigaAPIPlayground/: README.md
sampletools/delta_poker/: README.md
sampletools/delta_poker/results/: ISSUE 1_1643084038.381723
sampletools/feelings/: README.md  feelings.sqlite
sampletools/scrinch/: README.md  pom.xml
unit-testing/: DOCKER-QUICKSTART.md  DOCKER-README.md  README.md  TEST-COVERAGE-TUTORIAL.md  fix-test-coverage.patch
unit-testing/java-bad-coverage/: Dockerfile  Jenkinsfile  README.md  SanityCheck.java  docker-compose.yml  pom.xml
unit-testing/java-bad-coverage-api/: .gitignore  Dockerfile  Jenkinsfile  README.md  SanityCheck.sh  pom.xml
unit-testing/java-good-coverage/: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pom.xml
unit-testing/python-bad-coverage/: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
unit-testing/python-bad-coverage/features/: calculator.feature
unit-testing/python-bad-coverage/tests/: __init__.py  test_calculator.py
unit-testing/python-good-coverage/: Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  sanity_check.py
(+340 files in other folders)
